--- a/core/build.gradle
+++ b/core/build.gradle
@@ -34,7 +34,5 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
-    // for reflect
-    api 'com.github.ChickenHook:RestrictionBypass:2.2'
-
+    implementation 'org.lsposed.hiddenapibypass:hiddenapibypass:4.3'
 }
