--- a/accessibility-api/build.gradle
+++ b/accessibility-api/build.gradle
@@ -19,9 +19,13 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
+    kotlin {
+        jvmToolchain(11)
+    }
+    namespace 'cn.vove7.andro_accessibility_api'
 }
 
 dependencies {
