--- a/accessibility-api/src/main/AndroidManifest.xml
+++ b/accessibility-api/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cn.vove7.andro_accessibility_api">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
 
