--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,12 +11,12 @@ android {
             keyPassword '1234567890'
         }
     }
-    compileSdk 33
+    compileSdk 36
 
     defaultConfig {
-        applicationId "cn.vove7.andro_accessibility_api.demo"
+        applicationId "cn.vove7.andro_aoto_api.demo"
         minSdkVersion 21
-        targetSdkVersion 33
+        targetSdkVersion 36
         versionCode 1
         versionName "1.0"
 
@@ -24,8 +24,11 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
+    kotlin {
+        jvmToolchain(11)
     }
     buildTypes {
         debug {
@@ -40,21 +43,22 @@ android {
     buildFeatures {
         viewBinding true
     }
+    namespace 'cn.vove7.andro_accessibility_api.demo'
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.core:core-ktx:1.10.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.core:core-ktx:1.17.0'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2'
 
     implementation 'me.panavtec:drawableview:0.6.0'
 
     testImplementation 'junit:junit:4.13.2'
-    implementation 'androidx.test.uiautomator:uiautomator:2.2.0'
+    implementation 'androidx.test.uiautomator:uiautomator:2.3.0'
 
     implementation project(':accessibility-api')
     implementation project(':uiauto')
