--- a/uiauto/build.gradle
+++ b/uiauto/build.gradle
@@ -30,9 +30,8 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.10.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    api 'androidx.test.uiautomator:uiautomator:2.2.0'
+    implementation 'androidx.annotation:annotation:1.9.1'
+    api 'androidx.test.uiautomator:uiautomator:2.3.0'
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
     api project(":core")
