--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,11 +5,11 @@ plugins {
 
 android {
     namespace 'cn.vove7.auto.core'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         minSdk 21
-        targetSdk 33
+        targetSdk 34
 
         consumerProguardFiles "consumer-rules.pro"
     }
@@ -26,6 +26,9 @@ android {
     }
     kotlin {
         jvmToolchain(11)
+    }
+    publishing {
+        singleVariant("release") {}
     }
 }
 
