--- a/uiauto/build.gradle
+++ b/uiauto/build.gradle
@@ -5,11 +5,11 @@ plugins {
 
 android {
     namespace 'cn.vove7.accessibility.uiauto'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         minSdk 21
-        targetSdk 33
+        targetSdk 34
 
         consumerProguardFiles "consumer-rules.pro"
     }
@@ -21,11 +21,14 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
+    kotlin {
+        jvmToolchain(11)
+    }
+    publishing {
+        singleVariant("release") {}
     }
 }
 
